--- a/package.json
+++ b/package.json
@@ -18,28 +18,37 @@
     ]
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.41.0",
+    "@coinbase/agentkit": "^0.7.1",
+    "@coinbase/agentkit-langchain": "^0.3.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-radio-group": "^1.3.4",
     "@radix-ui/react-slider": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.2",
     "@tanstack/react-query": "^5.75.2",
     "@vercel/analytics": "^1.5.0",
+    "anthropic": "^0.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.4",
+    "langchain": "^0.3.24",
     "lucide-react": "^0.507.0",
     "ml-kmeans": "^6.0.0",
     "nanoid": "^5.1.5",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "openai": "^4.97.0",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
-    "wagmi": "^2.15.2"
+    "twitter-api-v2": "^1.23.0",
+    "wagmi": "^2.15.2",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
