--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.7.0",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-radio-group": "^1.3.4",
     "@radix-ui/react-slider": "^1.3.2",
     "@tanstack/react-query": "^5.75.2",
