--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "pino-pretty": "^13.0.0",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
