--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ]
   },
   "dependencies": {
+    "@0xintuition/graphql": "^0.8.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-dialog": "^1.1.13",
