--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-force-graph-3d": "^1.26.1",
     "recharts": "^2.15.3",
     "siwe": "^3.0.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "three": "^0.176.0",
     "viem": "^2.29.0",
     "wagmi": "^2.15.2"
   },
