--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@0xintuition/graphql": "^0.8.0",
+    "@apollo/client": "^3.13.8",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-dialog": "^1.1.13",
@@ -29,6 +30,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.4",
+    "graphql": "^16.11.0",
+    "graphql-ws": "^6.0.4",
     "lucide-react": "^0.507.0",
     "ml-kmeans": "^6.0.0",
     "nanoid": "^5.1.5",
@@ -39,7 +42,7 @@
     "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-force-graph-3d": "^1.26.1",
+    "react-force-graph": "^1.16.0",
     "recharts": "^2.15.3",
     "siwe": "^3.0.0",
     "sonner": "^2.0.3",
